image is added along with styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script src="script.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css"/>
     </head>
     <body>
         <center>
+            <img id="block-chain-network-image" src="images\blockchain.png" alt="blockchain-image">
             <h1>SaiKi Coin Transactions</h1>
             <input type="submit" onclick="get_chain()" value="Get Chain">
             <input type="submit" onclick="verify_chain()" value="Verify Chain">
@@ -23,5 +23,6 @@
             <br><br>
             <div id="result"></div>
         </center>
+        <link rel="stylesheet" href="styles.css"/>
     </body>
 </html>
